--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,7 @@ header{
     background-color: white;
     box-shadow: 0 20px 40px 0 rgba(0, 0, 0, .07);
     position: fixed;
+    z-index: 1000;
 }
 header .container{
     display: flex;
@@ -498,6 +499,16 @@ header .container .log-btn a{
     height: calc(100% - 110px);
     padding: 30px;
     border-bottom: 2px solid #eee;
+}
+@media (min-width: 991px) {
+.search-sec{
+    margin-top: 110px;
+}
+}
+@media (max-width: 991px){
+    .search-sec{
+        margin-top: 80px;
+    }
 }
 .search-sec .container{
     display: flex;
