--- a/css/style.css
+++ b/css/style.css
@@ -319,6 +319,7 @@ header .container .log-btn a{
 .how .container{
     display: grid;
     grid-template-columns: repeat(auto-fill,minmax(350px,1fr));
+    justify-content: center;
     align-items: center;
     gap: 40px
 }
