--- a/css/style.css
+++ b/css/style.css
@@ -642,23 +642,40 @@ header .container .log-btn a{
     font-size: 25px;
     padding: 40px 0 20px 0;
 }
+@media (max-width: 650px){
+.products .boxes-head{
+    text-align: center;
+}
+}
 .products .boxes{
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 20px;
     padding-bottom: 30px;
 }
+@media (max-width: 650px){
+    .products .boxes{
+        justify-content: center;
+        grid-template-columns: auto;
+    }
+}
 .products .box{
     border: 2px solid #eee;
     border-radius: 10px;
     overflow: hidden;
     transition: var(--main-transition);
+    max-width: 390px;
+}
+@media (max-width: 650px){
+.products .box{
+    width: 341px;
+}
 }
 .products .box:hover{
     box-shadow: 0 10px 40px rgba(0, 0, 0, 0.263);
 }
 .products .box img{
-    width: 390px;
+    width: 100%;
     height: 200px;
     object-fit: cover;
 }
